[gd_scene load_steps=5 format=2]

[ext_resource path="res://multiverse_navigation_ui.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.12549, 0.203922, 0.882353 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.294118, 0.356863, 0.670588, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.14902, 0.196078, 0.882353 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.294118, 0.490196, 0.670588, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.156863, 0.121569, 0.196078, 0.882353 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.490196, 0.294118, 0.670588, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MultiverseNavigationUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" color="Color( 0.0627451, 0.0627451, 0.0941176, 0.901961 )" 
rect_min_size = Vector2( 1920, 1080 )
rect_pivot_offset = Vector2( 960, 540 )

[node name="UniverseInfoPanel" type="Panel" parent="."]
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_styles/panel = SubResource( 1 )

[node name="UniverseName" type="Label" parent="UniverseInfoPanel"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 50.0
text = "Universe Name"
align = 1
valign = 1

[node name="UniverseType" type="Label" parent="UniverseInfoPanel"]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 80.0
text = "Universe Type"
align = 1
valign = 1

[node name="PropertiesLabel" type="Label" parent="UniverseInfoPanel"]
anchor_right = 1.0
margin_top = 90.0
margin_bottom = 110.0
text = "Universe Properties"
align = 1

[node name="PropertiesGrid" type="GridContainer" parent="UniverseInfoPanel"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 20.0
margin_right = -20.0
columns = 2

[node name="UniverseDescription" type="RichTextLabel" parent="UniverseInfoPanel"]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "Universe description will appear here."

[node name="AccessPointsPanel" type="Panel" parent="."]
anchor_left = 0.31
anchor_right = 0.7
anchor_bottom = 0.8
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="AccessPointsPanel"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 30.0
text = "Available Access Points"
align = 1

[node name="SearchFilter" type="LineEdit" parent="AccessPointsPanel"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = 70.0
placeholder_text = "Search access points..."

[node name="ScrollContainer" type="ScrollContainer" parent="AccessPointsPanel"]
anchor_top = 0.12
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="AccessPointsList" type="VBoxContainer" parent="AccessPointsPanel/ScrollContainer"]
margin_right = 526.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TravelButton" type="Button" parent="AccessPointsPanel"]
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -10.0
disabled = true
text = "Travel to Selected Universe"

[node name="CosmicProgress" type="Control" parent="."]
anchor_left = 0.71
anchor_right = 1.0
anchor_bottom = 0.3
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Background" type="Panel" parent="CosmicProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="Title" type="Label" parent="CosmicProgress"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 30.0
text = "Cosmic Progress"
align = 1

[node name="AgeLabel" type="Label" parent="CosmicProgress"]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 60.0
text = "Cosmic Age: 0 - The Age of Formation"
align = 1

[node name="TurnLabel" type="Label" parent="CosmicProgress"]
anchor_right = 1.0
margin_top = 70.0
margin_bottom = 90.0
text = "Current Turn Progress:"
align = 1

[node name="TurnProgress" type="ProgressBar" parent="CosmicProgress"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 100.0
margin_right = -20.0
margin_bottom = 120.0
value = 50.0

[node name="MetanarrativeLabel" type="Label" parent="CosmicProgress"]
anchor_right = 1.0
margin_top = 140.0
margin_bottom = 160.0
text = "Metanarrative Progress:"
align = 1

[node name="MetanarrativeProgress" type="ProgressBar" parent="CosmicProgress"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 170.0
margin_right = -20.0
margin_bottom = 190.0
value = 25.0

[node name="AlignmentView" type="Control" parent="."]
anchor_left = 0.71
anchor_top = 0.31
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Background" type="Panel" parent="AlignmentView"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="Title" type="Label" parent="AlignmentView"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 30.0
text = "Universe Alignment"
align = 1

[node name="AlignmentVisualization" type="TextureRect" parent="AlignmentView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -20.0
expand = true
stretch_mode = 6

[node name="QuickTravelBar" type="HBoxContainer" parent="."]
anchor_top = 0.81
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
alignment = 1

[node name="QuickTravelLabel" type="Label" parent="QuickTravelBar"]
margin_left = 452.0
margin_top = 13.0
margin_right = 532.0
margin_bottom = 27.0
text = "Quick Travel:"

[node name="VSeparator" type="VSeparator" parent="QuickTravelBar"]
margin_left = 536.0
margin_right = 540.0
margin_bottom = 40.0

[node name="TravelAnimation" type="AnimationPlayer" parent="."]

[node name="ConsoleButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.92
anchor_right = 0.5
anchor_bottom = 0.92
margin_left = -100.0
margin_right = 100.0
margin_bottom = 30.0
text = "Open Console"

[node name="CloseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 50.0
text = "X"